# dafs

./: .dafs_session  .gitignore  BOOTSTRAP_NODE_MANAGEMENT.md  CHANGELOG.md  CLI_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  FEATURES_GUIDE.md  INTEGRATION.md  PKGBUILD  QUICKSTART.md  README.md  SETUP_GUIDE.md  bootstrap_nodes.json  build.rs  test_web_integration.rs
docs/: API.md
proto/: dafs.proto
scripts/: dafs.service
src/: cli.rs  lib.rs  main.rs  models.rs  remote_management.rs  service_manager.rs  user_management.rs  web.rs
src/ai/: mod.rs
src/api/: mod.rs
src/crypto/: mod.rs
src/grpc/: mod.rs
src/peer/: mod.rs
src/storage/: mod.rs
userkeys/: testuser.key
web/: README.md  index.html  package-lock.json  package.json  setup.sh
web/src/: App.tsx  config.ts
web/src/api/: client.ts
web/src/components/Layout/: AppLayout.tsx
web/src/contexts/: AuthContext.tsx
web/src/pages/: AI.tsx  Dashboard.tsx  Files.tsx  Login.tsx  Messaging.tsx  PeerDiscovery.tsx  Peers.tsx  Register.tsx  RemoteManagement.tsx  Settings.tsx  UserManagement.tsx
web/src/types/: api.ts
