[package]
name = "dafs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
typenum = "1.17"
generic-array = "0.14"
libp2p = { version = "0.52", features = ["tcp", "dns", "tokio", "mdns", "request-response", "identify", "kad", "noise", "yamux", "gossipsub", "websocket", "macros", "relay"] }
# libp2p-request-response removed

aes-gcm = "0.10" 
rand = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
sled = "0.34"
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = "2"
axum = { version = "0.6", features = ["multipart"] }
tower-http = { version = "0.3", features = ["fs", "cors"] }
http = "0.2"
once_cell = "1.18"
clap = { version = "4.4", features = ["derive"] }
ndarray = "0.15"
thiserror = "1.0"
async-trait = "0.1"

# gRPC dependencies
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"

pbkdf2 = "0.12"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
open = "5.0"
indicatif = "0.17"
rpassword = "7.2"

rustyline = "12.0"

# Enhanced messaging and peer discovery dependencies
dialoguer = "0.11"
shell-words = "1.1"

chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.10"

console = "0.15"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# Remove ed25519-dalek if not used in codebase
# x25519-dalek is present for key exchange

tower = "0.4"
